--- a/api01/src/main/resources/static/sample.html
+++ b/api01/src/main/resources/static/sample.html
@@ -7,21 +7,20 @@
 </head>
 <body>
 
-<h1>Sample HTML </h1>
+    <h1>Sample HTML </h1>
 
-<script>
+    <script>
 
-    // 샘플 컨트롤러에 호출 및 리턴 출력
-    async function callTest(){
-       const response = await axios.get("http://localhost:8080/api/sample/doA")
-       return response.data
-    }
+        async function callTest(){
+            const response = await axios.get("http://localhost:8080/api/sample/doA")
+            return response.data
+        }
 
-    callTest()
-       .then(data => console.log(data))  // 브라우저 콘솔에 보임
-       .catch(e => console.log(e));
+        callTest()
+            .then(data => console.log(data))
+            .catch(e => console.log(e));
 
 
-</script>
+    </script>
 </body>
 </html>
